// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot AssetHub Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Dave rejects the announced call 1`] = `[]`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "123g6BR5ndKLv82TmeJDTV9eire6XbjFMKAEs89xv8QqQBwH",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "1xaSQU5v7RsZEYHzQHcQZUrCxuJCzxFSmFbPNdcg46haPSh",
      "callHash": "(hash)",
      "multisig": "123g6BR5ndKLv82TmeJDTV9eire6XbjFMKAEs89xv8QqQBwH",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "13tWZWfquohsYjqW1uTVTQFK32Xw5EyPWzHJs3dGFMPNwBbV",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "13ujXjiPYAn7WwZ8AzdjspwDxjTpZoPLYFGDbZUkcDF1V6ee",
      "callHash": "(hash)",
      "multisig": "13tWZWfquohsYjqW1uTVTQFK32Xw5EyPWzHJs3dGFMPNwBbV",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy multisig > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "12xq4cVMvLkp9Kv7UHNoVZMde3crJHheNpTjbJnQ2Hv1eFsx",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > Cancel 2-of-3 multisig with pure proxy before any other approvals > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "12ibpuuQ5Ed8EAEx9URDzPejAxJLE3fXYzy3qxVXYVZCgZeQ",
      "callHash": "(hash)",
      "multisig": "14qiJnYBtCLiYjvsTYondSvtHBsMC74Ne4KXzsyVKcVgCqA9",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;
